...
    
    init(repository: CityRepositoryProtocol) {
        self.repository = repository
    }
    
    var sortedCities: [City] {
        let curr = cities.first { $0.name == "Your location" }
        let subscribed = cities.filter { $0.selected && $0.name != "Your location" }
        let others = cities.filter { !$0.selected && $0.name != "Your location" }
        
        var result: [City] = []
        if let curr = curr {
            result.append(curr)
...
