...
                    } label: {
                        Label(
                            "Open Owner Profile",
                            systemImage: "person.circle"
                        )
                    }
                    .accessibilityIdentifier("openDeveloperButton")

                    Button {
                        viewModel.shareTapped()
                    } label: {
                        Label(
                            "Share Repository",
...
                    }.sheet(isPresented: $viewModel.showShare) {
                        ShareSheetView(items: [
                            viewModel.repository.htmlUrl?.absoluteString
                                ?? viewModel.repository.fullName
                        ])
                    }
                    .accessibilityIdentifier("shareButton")
                }
            }
            .padding()
        }
        .navigationTitle("Repository")
        .navigationBarTitleDisplayMode(.inline)
...
