...
                TextField("GitHub username", text: $viewModel.username)
                    .textFieldStyle(.roundedBorder)
                    .autocapitalization(.none)
                    .disableAutocorrection(true)
                    .accessibilityIdentifier("usernameField")

                Button("Load") {
                    Task {
                        await viewModel.load()
                    }
                }.accessibilityIdentifier("loadButton")
            }
            .padding(.horizontal)

            HStack {
                UISearchBarRepresentable(
                    text: $viewModel.searchText,
...
